# c-includer

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  includer-old.hpp  includer.hpp  main.cpp  opencl-includer.hpp  opencl.h  out.glsl
defs/: defs.glsl
src/: includer.cpp  includer.hpp  test.cpp
